# trade

./: .dockerignore  .gitignore  Dockerfile  dedup.py  docker-compose.yml  pyproject.toml  trade.py
data/: 2022-05-02.csv  2022-05-03.csv  2022-05-04.csv  2022-05-05.csv  2022-05-06.csv  2022-05-09.csv  2022-05-10.csv  2022-05-11.csv  2022-05-12.csv  2022-05-13.csv  2022-05-16.csv  2022-05-17.csv  2022-05-18.csv  2022-05-19.csv  2022-05-20.csv  2022-05-24.csv  2022-05-25.csv  2022-05-26.csv  2022-05-27.csv  2022-05-30.csv  2022-05-31.csv  2022-06-01.csv  2022-06-02.csv  2022-06-03.csv  2022-06-06.csv  2022-06-07.csv  2022-06-08.csv  2022-06-09.csv  2022-06-10.csv  2022-06-13.csv  2022-06-14.csv  2022-06-15.csv  2022-06-16.csv  2022-06-17.csv  2022-06-20.csv  2022-06-21.csv  2022-06-22.csv  2022-06-23.csv  2022-06-24.csv  2022-06-27.csv  (+55 more)
mytrade/: big4.py  pandadata.py  plotting.py  selector_observer.py  strategy.py  weighted_hma.py  whma_observer.py  whma_selector.py
tools/: submit.py
