[tool.poetry]
name = "trade"
version = "0.1.0"
description = ""
authors = ["Yu"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
backtrader-plotting = {extras = ["plotting"], version = "^2.0.0"}
click = "^8.1.3"
requests = "^2.28.1"
backtrader = {git = "https://github.com/mementum/backtrader.git"}
pytz = "^2022.2.1"
pathos = "^0.2.9"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
boto3 = "^1.24.80"
paramiko = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
